# Nova-Vox

./: .gitignore  Anata_Test.txt  CMakeLists.txt  C_Bridge.py  Compression-Decompression loss tests 2.ipynb  Compression-Decompression loss tests 3.ipynb  Compression-Decompression loss tests 4.ipynb  Compression-Decompression loss tests 5.ipynb  Compression-Decompression loss tests.ipynb  Concatenation tests.ipynb  Concept demo-Copy1.ipynb  Concept demo-Copy2.ipynb  Concept demo-No-f0f1.ipynb  Concept demo.ipynb  Devkit_UI.spec  Nova-Vox.spec  NovaVox.kv  README.md  Util.py  devkit_UI.py  devkit_UI.spec  devkit_UI_Metadata.py  devkit_locale.py  devkit_pipeline.py  devkit_runtime.py  editor_UI.py  editor_pipeline.py  editor_runtime.py  global_consts.py  info_post_install.txt  info_pre_install.txt  installer.ifp  installer.iss  license.txt  locale.py  requirements.txt  settings.ini  setup.py  ttk_cfg.py  vb_tester.py  (+4 more)
.github/workflows/: python-app.yml
.ipynb_checkpoints/: Compression-Decompression loss tests 2-checkpoint.ipynb  Compression-Decompression loss tests 3-checkpoint.ipynb  Compression-Decompression loss tests 4-checkpoint.ipynb  Compression-Decompression loss tests 5-checkpoint.ipynb  Compression-Decompression loss tests-checkpoint.ipynb  Concatenation tests-checkpoint.ipynb  Concept demo-Copy1-checkpoint.ipynb  Concept demo-No-f0f1-checkpoint.ipynb  Concept demo-checkpoint.ipynb
API/: Addon.py  Functional.py  Node.py  Ops.py  compat.py
Backend/: AudioSample.py  NodeLib.py  UtauDefaultPhonemes.ini  UtauImport.py  Util.py  __init__.py
C/: fft.c  fft.h  fft_kissfft.c  interpolation.c  interpolation.h  util.c  util.h
Locale/: devkit_locale.py  editor_locale.py
Localization/: devkit_localization.py  editor_localization.py
MiddleLayer/: BorderSystem.py  DataHandlers.py  ErrorHandler.py  FileIO.py  IniParser.py  MiddleLayer.py  UiCallbacks.py  UndoRedo.py
Params/: dummy.txt
Tests/: Anata_Test.txt  Consonant_Breathiness_Test.txt  How_to_use_tests.txt  Short_Vowel_Pitch_Test.txt  Steadiness_Test.txt  Vowel_Test.txt
assets/: settings.ini
cython/: fft.pyx
installer/: Nova-Vox.spec  info_post_install.txt  info_pre_install.txt  installer.iss
src/: C_Bridge.py  Util.py  devkit_runtime.py  editor_runtime.py  global_consts.py  test_devkit.py  test_editor.py
(+192 files in other folders)
